# AVRS

./: .gitignore  README.md  coms_out.txt  frames.gv
Flex Pendant Files/ROS/: ROS_motion.mod
ImageMagick-7.0.8-25/: ImageMagick.spec  Makefile  common.shi  config.status  configure  libtool  magick.sh
ImageMagick-7.0.8-25/MagickCore/: ImageMagick.pc  MagickCore.pc  libMagickCore-7.Q16HDRI.la  magick-baseconfig.h  version.h
ImageMagick-7.0.8-25/MagickWand/: MagickWand.pc
ImageMagick-7.0.8-25/PerlMagick/: Makefile.PL
ImageMagick-7.0.8-25/coders/: MagickCore_libMagickCore_7_Q16HDRI_la-djvu.lo  MagickCore_libMagickCore_7_Q16HDRI_la-exr.lo  MagickCore_libMagickCore_7_Q16HDRI_la-webp.lo  MagickCore_libMagickCore_7_Q16HDRI_la-wmf.lo
ImageMagick-7.0.8-25/config/: ImageMagick.rdf  Magick++.dox  MagickCore.dox  MagickWand.dox  config.h  configure.xml  configure.xml.in
Temp/ACTION CLEANUP/actionlib_tutorials_client/: CMakeLists.txt
Temp/Package Graveyard/ACTION CLEANUP/actionlib_tutorials_msgs/: CMakeLists.txt
Temp/Package Graveyard/ACTION CLEANUP/actionlib_tutorials_py_client/: CMakeLists.txt
Temp/avrs_main/: CMakeLists.txt  setup.py
Temp/bakcup server make/: OLLD.txt  temp.txt
Temp/follow_joint_trajectory_msgs/: package.xml
Temp/launch/: serialcoms.launch
Temp/motion_action_server/: CMakeLists.txt  OLD LOCAL   OLD PKG  TEMP
Temp/state_machine/: CMakeLists.txt  package.xml
arduino/HelloError/: HelloError.ino
arduino/LinearRange_ROSUSB/: LinearRange_ROSUSB.ino
arduino/LinearRange_ROS_USB_Final_B/: LinearRange_ROS_USB_Final_B.ino
arduino/force_as_point_test/: force_as_point_test.ino
arduino/force_test/: force_test.ino
arduino/old_working_final/: old_working_final.ino
arduino/subscriber_test/: subscriber_test.ino
arduino/t2/: t2.ino
arduino/working_final/: working_final.ino
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
extras/: coms_out.txt  frames.gv  notes.txt  rosgraph.dot
git_user_script/: Niko  Ryano647.txt  jremz8902.txt  mattfortmeyer.txt  niko1499.txt  setGitUser.sh
install/: .rosinstall  setup.sh
notes/: IP Notes  USB coms notes
rviz/: CLN_V.rviz  adv_kinect.rviz  adv_kinect2.rviz  cloud_compair.rviz  fusion.rviz  simple_kinect.rviz  workcellX.rviz
src/: frames.gv
src/abb_motion_actionserver/: CMakeLists.txt  package.xml
src/actionlib_tutorials/: package.xml
src/actionlib_tutorials_client/: CMakeLists.txt  package.xml
src/actionlib_tutorials_msgs/: package.xml
src/actionlib_tutorials_py_client/: package.xml
src/actionlib_tutorials_server/: CMakeLists.txt  package.xml
src/actions/: CMakeLists.txt  package.xml  readme.txt
src/avrs_main/: CMakeLists.txt  package.xml
src/beginner_tutorials/: package.xml
src/chores/: CMakeLists.txt  package.xml
src/computer_vision/: CMakeLists.txt  package.xml
src/coms/: CMakeLists.txt  README.txt  coms_out.txt  package.xml
src/coms_msgs/: CMakeLists.txt
src/coms_nodes/coms_service/: CMakeLists.txt  package.xml
src/coms_nodes/coms_service/src/: coms_service_node.cpp
src/cv/: CMakeLists.txt  package.xml
src/drivers/: RS232.txt
src/eoat/: CMakeLists.txt  package.xml
src/force_msgs/: CMakeLists.txt  package.xml
src/force_processing/: CMakeLists.txt  package.xml
src/main/: CMakeLists.txt  package.xml  setup.py
src/master_launcher/: CMakeLists.txt  serial_range.launch
src/min_motion_planning_client/: CMakeLists.txt  package.xml
src/min_motion_server/: CMakeLists.txt  package.xml
src/min_motion_server/src/: .motion_server_node.cpp.swn  .motion_server_node.cpp.swp
src/motion_action_server/: CMakeLists.txt  TEST.txt  package.xml
src/motion_action_server/msg/: MoveRobotFeedback.msg  MoveRobotResult.msg
src/motion_action_server/src/: .fibonacci_client.cpp.swp  .motion_server.cpp.swp  .myworkcell_core_node.cpp.swp  motion_action_server_node.cpp  motion_server.cpp
src/motion_action_server_OLD/: CMakeLists.txt
src/motion_planning_client/: CMakeLists.txt  package.xml
src/motion_planning_client/launch/: motion_client.launch
src/motion_planning_client/scripts/: TEMP.py  motion_planning_client.py
src/motion_server/: CMakeLists.txt  package.xml
src/motion_server/launch/: motion_server.launch
src/motion_server/src/: .motion_server_node.cpp.swk  .motion_server_node.cpp.swl  .motion_server_node.cpp.swm  .motion_server_node.cpp.swn  .motion_server_pose_node.cpp.swp  motion_server_node.cpp  motion_server_nodeOLD.cpp  motion_server_pose_node.cpp  motion_server_quat_node .cpp
src/moveit_abb_mobile1/: CMakeLists.txt
src/mover/: CMakeLists.txt
src/msgs/cv_service_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/msgs/cv_service_msgs/msg/: cv_service.srv
src/msgs/eoat_msgs/: CMakeLists.txt  package.xml
src/msgs/eoat_msgs/msg/: eoat_to_pc.msg  pc_to_eoat.msg
src/msgs/mode_msgs/: CMakeLists.txt
src/msgs/mode_msgs/msg/: Mode.srv
src/msgs/motion_action_server_msgs/: CMakeLists.txt  package.xml
src/msgs/motion_action_server_msgs/action/: MoveRobot.action
src/msgs/motion_msgs/: CMakeLists.txt  package.xml
src/msgs/motion_msgs/action/: MoveRobot.action  MoveRobotFast.action  MoveRobotPose.action  MoveRobotQuat.action
src/my_pkg/: CMakeLists.txt  package.xml
src/myworkcell_core/: CMakeLists.txt  package.xml
src/point_cloud_processing/: CMakeLists.txt  package.xml
src/point_cloud_processing_experimental/: CMakeLists.txt  package.xml
src/seurobot/: CMakeLists.txt  package.xml
src/smach_machine/: CMakeLists.txt  package.xml
src/smach_machine/scripts/: real_smach_machine.py  smach_machine.py
src/smach_machine/scripts/usecase_01/: executive_step_01.py
src/state_machine/: CMakeLists.txt  package.xml  smach_machine.py
src/template/: CMakeLists.txt  package.xml
src/tf_manipulator/: CMakeLists (copy).txt  CMakeLists.txt  package.xml
src/tf_manipulator/launch/: tf_manipulator.launch
src/tf_manipulator/src/: .tf_manipulator_node.cpp.swm  .tf_manipulator_node.cpp.swn  .tf_manipulator_node.cpp.swo  .tf_manipulator_node.cpp.swp  tf_manipulator_node.cpp
src/vision_cloud_fusion/: CMakeLists.txt  package.xml
(+561 files in other folders)
